[package]
name = "mongor"
version = "0.1.0"
edition = "2024"

[dependencies]
mongodb = "3.2.3"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
futures-util = "0.3"
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking"] }
