[package]
name = "mongor"
version = "0.1.0"
edition = "2024"

[dependencies]
mongodb = "3.2.3"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
serde_json = "1.0"
futures-util = "0.3"

[dev-dependencies]
serde_json = "1.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking"] }
serial_test = "2.0.0"
